# flake8-implicit-str-concat

./: .pre-commit-config.yaml  LICENSE  README.md  RELEASING.md  flake8_implicit_str_concat.py  pyproject.toml  tox.ini
.github/: FUNDING.yml  SECURITY.md
.github/workflows/: lint.yml  release.yml  test.yml
tests/: test_flake8-implicit-str-concat.py
tests/fixtures/: ISC004.py
