[build-system]
build-backend = "flit_core.buildapi"
requires = [
  "flit-core<4,>=3",
]

[tool.flit.entrypoints."flake8.extension"]
ISC = "flake8_implicit_str_concat:Checker"
[tool.flit.metadata]
module = "flake8_implicit_str_concat"
description-file = "README.md"
author = "Dylan Turner"
author-email = "58230987+keisheiled@users.noreply.github.com"
home-page = "https://github.com/flake8-implicit-str-concat/flake8-implicit-str-concat"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Framework :: Flake8",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.9"
requires = [
  "more-itertools >=8.0.2; python_version <= '3.9'",
]

[tool.ruff]
fix = true

lint.select = [
  "C4",     # flake8-comprehensions
  "E",      # pycodestyle errors
  "EM",     # flake8-errmsg
  "F",      # pyflakes errors
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "PGH",    # pygrep-hooks
  "PYI",    # flake8-pyi
  "RUF022", # unsorted-dunder-all
  "RUF100", # unused noqa (yesqa)
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
  "YTT",    # flake8-2020
]
lint.ignore = [
  "E203",  # Whitespace before ':'
  "E221",  # Multiple spaces before operator
  "E226",  # Missing whitespace around arithmetic operator
  "E241",  # Multiple spaces after ','
  "UP038", # Makes code slower and more verbose
]
lint.isort.required-imports = [ "from __future__ import annotations" ]

[tool.mypy]
pretty = true
strict = true
show_error_codes = true
